--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "tsup",
     "start": "node dist/index.js",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -20,17 +20,20 @@
     "@hono/zod-openapi": "^1.1.4",
     "@hono/zod-validator": "^0.7.4",
     "@neondatabase/serverless": "^1.0.2",
+    "@scalar/hono-api-reference": "^0.5.160",
     "argon2": "^0.44.0",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
     "hono": "^4.10.6",
+    "hono-pino": "^0.10.3",
     "nanoid": "^5.1.6",
     "pg": "^8.16.3",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
     "resend": "^6.4.2",
     "stoker": "^2.0.1",
-    "@scalar/hono-api-reference": "^0.5.160",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -38,6 +41,7 @@
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "drizzle-kit": "^0.31.7",
+    "tsup": "^8.5.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
