added home route

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-   "version": 2,
-   "builds": [
-      {
-         "src": "src/index.ts",
-         "use": "@vercel/node"
-      }
-   ],
-   "routes": [
-      {
-         "src": "/(.*)",
-         "dest": "src/index.ts"
-      }
-   ]
+"$schema": "https://openapi.vercel.sh/vercel.json",
+"version": 2,
+"rewrites": [
+   {
+      "source": "/(.*)",
+      "destination": "/api"
+   }
+],
+"functions": {
+   "api/index.ts": {
+      "runtime": "nodejs22.x"
+   }
+}
 }
