--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@hono/zod-validator": "^0.7.4",
     "@neondatabase/serverless": "^1.0.2",
     "@scalar/hono-api-reference": "^0.5.160",
-    "argon2": "^0.44.0",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
     "drizzle-orm": "^0.44.7",
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "~2.3.5",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "drizzle-kit": "^0.31.7",
