--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Manage-X API - A lightweight REST API for managing posts, products, clients, and groups",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch --ignore ./dist --ignore ./node_modules --ignore ./*.log --ignore ./*.txt src/index.ts",
     "build": "tsup",
     "start": "node dist/index.js",
     "db:generate": "drizzle-kit generate",
