feat: Add Vercel API entry point for Hono application and update Vercel rewrites.

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
    "$schema": "https://openapi.vercel.sh/vercel.json",
    "version": 2,
-   "buildCommand": "",
-   "outputDirectory": "",
    "rewrites": [
       {
          "source": "/(.*)",
-         "destination": "/api"
+         "destination": "/api/index"
       }
    ]
 }
