--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
    "$schema": "https://openapi.vercel.sh/vercel.json",
    "version": 2,
+   "buildCommand": "echo 'No build needed for serverless functions'",
+   "outputDirectory": ".",
    "rewrites": [
       {
          "source": "/(.*)",
