--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
    "$schema": "https://openapi.vercel.sh/vercel.json",
    "version": 2,
+   "public": false,
    "buildCommand": "echo 'No build needed for serverless functions'",
    "outputDirectory": ".",
    "rewrites": [
