--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
    "$schema": "https://openapi.vercel.sh/vercel.json",
    "version": 2,
    "public": false,
-   "buildCommand": "echo 'No build needed for serverless functions'",
+   "buildCommand": "npm run build",
    "outputDirectory": ".",
    "rewrites": [
       {
