--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "~2.3.5",
+    "@netlify/functions": "^5.1.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
