--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv-expand": "^12.0.3",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
+    "es-toolkit": "^1.42.0",
     "hono": "^4.10.6",
     "hono-pino": "^0.10.3",
     "nanoid": "^5.1.6",
