--- a/package.json
+++ b/package.json
@@ -21,18 +21,21 @@
     "@hono/zod-validator": "^0.7.4",
     "@neondatabase/serverless": "^1.0.2",
     "@scalar/hono-api-reference": "^0.5.160",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
     "es-toolkit": "^1.42.0",
+    "form-data": "^4.0.5",
     "hono": "^4.10.6",
     "hono-pino": "^0.10.3",
     "nanoid": "^5.1.6",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
     "resend": "^6.4.2",
+    "sharp": "^0.34.5",
     "stoker": "^2.0.1",
     "zod": "^4.1.12"
   },
@@ -40,6 +43,7 @@
     "@biomejs/biome": "~2.3.5",
     "@netlify/functions": "^5.1.0",
     "@types/bcryptjs": "^3.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "drizzle-kit": "^0.31.7",
